cofig.yml updated

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - ruby/install-deps
       - run:
           name: rails test
-          command: bundle exec rails test
+          command: bundle _2.5.15_ exec rails test
   deploy:
     # This is an example deploy job, not actually used by the workflow
     docker:
